# Jamo-basedKoreanTokenization

./: .gitignore  ProjectReport.tex  README.md  pyproject.toml  requirements.txt
datas/train/: 김유정-동백꽃-조광.txt  날개(이상).txt
dicts/full/: corpus_h2hcj.txt  merges.json  vocab.json
dicts/hf_full/: tokenizer.json  vocab.json
dicts/hf_full_16k/: tokenizer.json  vocab.json
dicts/hf_jamo/: tokenizer.json  vocab.json
dicts/hf_jamo_16k/: tokenizer.json  vocab.json
dicts/jamo/: corpus_h2hcj.txt
src/: app.py  main.py
src/scripts/: plot_loss.py  tokenizer_stats.py  train_hf_tokenizer.py
src/scripts/stats/: tokenizer_stats_chunk_05.csv
src/tokenizer/: config.py  hf_jamo_bpe.py  jamo_bpe.py
src/translation/: dataset.py  model.py  train.py  translate.py
