[project]
name = "jamo-basedkoreantokenization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "kss>=6.0.6",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "tokenizer>=3.6.2",
    "tokenizers>=0.22.2",
    "torch",
    "tqdm",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
